# Lession-10-Task-2-New

Lession 10 Task 2/: CMakeLists.txt  Lession 10 Task 2.cpp  Quadrilateral.cpp  equilateralTriangle.h  printFigure.cpp
